Ria 4751 update (#201)
* Squashed commit of the following:

commit 80da1355cea20bd21d83be47e15663b216d0456c
Merge: 0dded5e 9c23e41
Author: david.crespo <david.crespo@hmcts.net>
Date:   Fri Nov 26 13:47:12 2021 +0000

    Merge branch 'master' into feature/ria-4941-make-an-application

commit 0dded5ed4ca7083fda3eec31834e8af50760eb87
Merge: 590cae4 6b52b81
Author: david.crespo <david.crespo@hmcts.net>
Date:   Fri Nov 19 17:48:15 2021 +0000

    Merge branch 'master' into feature/ria-4941-make-an-application

    # Conflicts:
    #	src/main/resources/wa-task-initiation-ia-asylum.dmn
    #	src/test/java/uk/gov/hmcts/reform/iataskconfiguration/dmn/CamundaTaskInitiationTest.java

commit 590cae42bd7b2a6954ca96260b1e146b315c8aa4
Author: david.crespo <david.crespo@hmcts.net>
Date:   Fri Nov 19 17:21:49 2021 +0000

    back up initiation dmn

commit a14e6ad089c022c9646545ef32d43c0006746262
Author: david.crespo <david.crespo@hmcts.net>
Date:   Fri Oct 29 16:58:41 2021 +0100

    add process categories to the makeAnApplication

commit 4a2e8db8ba8da45a0ea3885a3073cf1931eb7039
Author: david.crespo <david.crespo@hmcts.net>
Date:   Fri Oct 29 15:58:01 2021 +0100

    correct comments from the code review

commit 7806a01498a2fcf86abaf8bee1b071e4c3773746
Merge: 683b7b8 e95280d
Author: david.crespo <david.crespo@hmcts.net>
Date:   Fri Oct 29 09:58:53 2021 +0100

    fix conflicts

commit 683b7b815ee6583820de9d7920265a5ef9cdfa17
Author: david.crespo <david.crespo@hmcts.net>
Date:   Thu Oct 28 20:08:51 2021 +0100

    second attempt to fix CVE-2021-42340 by upgrading library

commit 23bd56051212bc8bddcfd0664ac1fa7a6cd08670
Author: david.crespo <david.crespo@hmcts.net>
Date:   Thu Oct 28 20:05:56 2021 +0100

    first attempt to fix CVE-2021-42340 by removing unused dependencies

commit 3dae0cce5ffa1f0533bb008f611652b9e87cfbc8
Author: david.crespo <david.crespo@hmcts.net>
Date:   Thu Oct 28 19:50:43 2021 +0100

    add unit sce