@@ -12,13 +12,13 @@ import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 import uk.gov.hmcts.reform.iataskconfiguration.DmnDecisionTableBaseUnitTest;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Stream;
 
 import static java.util.Arrays.asList;
 import static java.util.Collections.emptyList;
-import static java.util.Collections.emptyMap;
 import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static uk.gov.hmcts.reform.iataskconfiguration.DmnDecisionTable.WA_TASK_COMPLETION_IA_ASYLUM;
@@ -34,13 +34,43 @@ class CamundaTaskCompletionTest extends DmnDecisionTableBaseUnitTest {
 
         return Stream.of(
             Arguments.of(
+                "residentJudgeFtpaDecision",
+                asList(
+                    Map.of(
+                        "taskType", "decideAnFTPA",
+                        "completionMode", "Auto"
+                    ),
+                    Collections.emptyMap()
+                )
+            ),
+            Arguments.of(
+                "leadershipJudgeFtpaDecision",
+                asList(
+                    Map.of(
+                        "taskType", "decideAnFTPA",
+                        "completionMode", "Auto"
+                    ),
+                    Collections.emptyMap()
+                )
+            ),
+            Arguments.of(
                 "requestRespondentEvidence",
                 asList(
                     Map.of(
                         "taskType", "reviewTheAppeal",
                         "completionMode", "Auto"
                     ),
-                    emptyMap()
+                    Collections.emptyMap()
+                )
+            ),
+            Arguments.of(
+                "uploadHearingRecording",
+                asList(
+                    Map.of(
+                        "taskType", "uploadHearingRecording",
+                        "completionMode", "Auto"
+                    ),
+                    Collections.emptyMap()
                 )
             ),
             Arguments.of(
@@ -50,7 +80,7 @@ class CamundaTaskCompletionTest extends DmnDecisionTableBaseUnitTest {
                         "taskType", "reviewRespondentEvidence",
                         "completionMode", "Auto"
                     ),
-                    emptyMap()
+                    Collections.emptyMap()
                 )
             ),
             Arguments.of(
@@ -60,7 +90,7 @@ class CamundaTaskCompletionTest extends DmnDecisionTableBaseUnitTest {
                         "taskType", "reviewRespondentEvidence",
                         "completionMode", "Auto"
                     ),
-                    emptyMap()
+                    Collections.emptyMap()
                 )
             ),
             Arguments.of(
@@ -70,24 +100,17 @@ class CamundaTaskCompletionTest extends DmnDecisionTableBaseUnitTest {
                         "taskType", "reviewRespondentEvidence",
                         "completionMode", "Auto"
                     ),
-                    emptyMap()
+                    Collections.emptyMap()
                 )
             ),
             Arguments.of(
                 "requestResponseReview",
                 asList(
                     Map.of(
-                        "taskType", "reviewReasonsForAppeal",
-                        "completionMode", "Auto"
-                    ),
-                    Map.of(
-                        "taskType", "reviewClarifyingQuestionsAnswers",
-                        "completionMode", "Auto"
-                    ),
-                    Map.of(
                         "taskType", "reviewRespondentResponse",
                         "completionMode", "Auto"
-                    )
+                    ),
+                    Collections.emptyMap()
                 )
             ),
             Arguments.of(
@@ -97,7 +120,15 @@ class CamundaTaskCompletionTest extends DmnDecisionTableBaseUnitTest {
                         "taskType", "reviewAppealSkeletonArgument",
                         "completionMode", "Auto"
                     ),
-                    emptyMap()
+                    Map.of(
+                        "taskType", "reviewReasonsForAppeal",
+                        "completionMode", "Auto"
+                    ),
+                    Map.of(
+                        "taskType", "reviewClarifyingQuestionsAnswers",
+                        "completionMode", "Auto"
+                    ),
+                    Collections.emptyMap()
                 )
             ),
             Arguments.of(
@@ -107,7 +138,7 @@ class CamundaTaskCompletionTest extends DmnDecisionTableBaseUnitTest {
                         "taskType", "reviewAppealSkeletonArgument",
                         "completionMode", "Auto"
                     ),
-                    emptyMap()
+                    Collections.emptyMap()
                 )
             ),
             Arguments.of(
@@ -121,7 +152,7 @@ class CamundaTaskCompletionTest extends DmnDecisionTableBaseUnitTest {
                         "taskType", "reviewClarifyingQuestionsAnswers",
                         "completionMode", "Auto"
                     ),
-                    emptyMap()
+                    Collections.emptyMap()
                 )
             ),
             Arguments.of(
@@ -135,7 +166,7 @@ class CamundaTaskCompletionTest extends DmnDecisionTableBaseUnitTest {
                         "taskType", "reviewClarifyingQuestionsAnswers",
                         "completionMode", "Auto"
                     ),
-                    emptyMap()
+                    Collections.emptyMap()
                 )
             ),
             Arguments.of(
@@ -148,16 +179,18 @@ class CamundaTaskCompletionTest extends DmnDecisionTableBaseUnitTest {
                     Map.of(
                         "taskType", "reviewAdditionalHomeOfficeEvidence",
                         "completionMode", "Auto"
-                    )
+                    ),
+                    Collections.emptyMap()
                 )
             ),
             Arguments.of(
-                "uploadAdditionalEvidenceHomeOffice",
+                "markAddendumEvidenceAsReviewed",
                 asList(
                     Map.of(
-                        "taskType", "reviewAdditionalHomeOfficeEvidence",
+                        "taskType", "reviewAddendumEvidence",
                         "completionMode", "Auto"
-                    )
+                    ),
+                    Collections.emptyMap()
                 )
             ),
             Arguments.of(
@@ -167,7 +200,7 @@ class CamundaTaskCompletionTest extends DmnDecisionTableBaseUnitTest {
                         "taskType", "reviewCmaRequirements",
                         "completionMode", "Auto"
                     ),
-                    emptyMap()
+                    Collections.emptyMap()
                 )
             ),
             Arguments.of(
@@ -177,7 +210,7 @@ class CamundaTaskCompletionTest extends DmnDecisionTableBaseUnitTest {
                         "taskType", "attendCma",
                         "completionMode", "Auto"
                     ),
-                    emptyMap()
+                    Collections.emptyMap()
                 )
             ),
             Arguments.of(
@@ -187,7 +220,7 @@ class CamundaTaskCompletionTest extends DmnDecisionTableBaseUnitTest {
                         "taskType", "reviewRespondentResponse",
                         "completionMode", "Auto"
                     ),
-                    emptyMap()
+                    Collections.emptyMap()
                 )
             ),
             Arguments.of(
@@ -197,47 +230,17 @@ class CamundaTaskCompletionTest extends DmnDecisionTableBaseUnitTest {
                         "taskType", "reviewHearingRequirements",
                         "completionMode", "Auto"
                     ),
-                    emptyMap()
-                )
-            ),
-            Arguments.of(
-                "createCaseSummary",
-                asList(
-                    Map.of(
-                        "taskType", "createCaseSummary",
-                        "completionMode", "Auto"
-                    ),
-                    emptyMap()
-                )
-            ),
-            Arguments.of(
-                "generateHearingBundle",
-                asList(
-                    Map.of(
-                        "taskType", "createHearingBundle",
-                        "completionMode", "Auto"
-                    ),
-                    emptyMap()
+                    Collections.emptyMap()
                 )
             ),
             Arguments.of(
                 "decisionAndReasonsStarted",
                 asList(
                     Map.of(
-                        "taskType", "startDecisionsAndReasonsDocument",
+                        "taskType", "caseSummaryHearingBundleStartDecision",
                         "completionMode", "Auto"
                     ),
-                    emptyMap()
-                )
-            ),
-            Arguments.of(
-                "recordAllocatedJudge",
-                asList(
-                    Map.of(
-                        "taskType", "allocateFtpaToJudge",
-                        "completionMode", "Auto"
-                    ),
-                    emptyMap()
+                    Collections.emptyMap()
                 )
             ),
             Arguments.of(
@@ -247,7 +250,7 @@ class CamundaTaskCompletionTest extends DmnDecisionTableBaseUnitTest {
                         "taskType", "decideOnTimeExtension",
                         "completionMode", "Auto"
                     ),
-                    emptyMap()
+                    Collections.emptyMap()
                 )
             ),
             Arguments.of(
@@ -257,7 +260,51 @@ class CamundaTaskCompletionTest extends DmnDecisionTableBaseUnitTest {
                         "taskType", "processApplication",
                         "completionMode", "Auto"
                     ),
-                    emptyMap()
+                    Map.of(
+                        "taskType", "processApplicationToReviewDecision",
+                        "completionMode", "Auto"
+                    ),
+                    Collections.emptyMap()
+                )
+            ),
+            Arguments.of(
+                "editCaseListing",
+                List.of(
+                    Map.of(
+                        "taskType", "editListing",
+                        "completionMode", "Auto"
+                    ),
+                    Collections.emptyMap()
+                )
+            ),
+            Arguments.of(
+                "sendDecisionAndReasons",
+                asList(
+                    Map.of(
+                        "taskType", "sendDecisionsAndReasons",
+                        "completionMode", "Auto"
+                    ),
+                    Collections.emptyMap()
+                )
+            ),
+            Arguments.of(
+                "generateDecisionAndReasons",
+                asList(
+                    Map.of(
+                        "taskType", "prepareDecisionsAndReasons",
+                        "completionMode", "Auto"
+                    ),
+                    Collections.emptyMap()
+                )
+            ),
+            Arguments.of(
+                "editCaseListing",
+                asList(
+                    Map.of(
+                        "taskType", "editListing",
+                        "completionMode", "Auto"
+                    ),
+                    Collections.emptyMap()
                 )
             ),
             Arguments.of(
@@ -283,7 +330,7 @@ class CamundaTaskCompletionTest extends DmnDecisionTableBaseUnitTest {
 
         //The purpose of this test is to prevent adding new rows without being tested
         DmnDecisionTableImpl logic = (DmnDecisionTableImpl) decision.getDecisionLogic();
-        assertThat(logic.getRules().size(), is(19));
+        assertThat(logic.getRules().size(), is(22));
 
     }
 
